// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match the snapshot after data has been loaded 1`] = `
<div>
  <nav
    aria-label="Breadcrumbs"
    role="navigation"
  >
    <ol
      class="breadcrumbs"
    >
      <li
        class="breadcrumbs__crumb"
      >
        <a
          href="/overview"
        >
          Administration
        </a>
      </li>
      <li
        class="breadcrumbs__crumb"
      >
        <a
          href="/organisations"
        >
          Organisations
        </a>
      </li>
      <li
        class="breadcrumbs__crumb"
      >
        <a
          href="/organisations/1"
        >
          NICE
        </a>
      </li>
      <li
        class="breadcrumbs__crumb"
      >
        <span>
          Edit users
        </span>
      </li>
    </ol>
  </nav>
  <script
    type="application/ld+json"
  >
    {
  "@context": "http://schema.org",
  "@type": "BreadcrumbList",
  "itemListElement": [
    {
      "@type": "ListItem",
      "position": 1,
      "item": {
        "@id": "/overview",
        "name": "Administration"
      }
    },
    {
      "@type": "ListItem",
      "position": 2,
      "item": {
        "@id": "/organisations",
        "name": "Organisations"
      }
    },
    {
      "@type": "ListItem",
      "position": 3,
      "item": {
        "@id": "/organisations/1",
        "name": "NICE"
      }
    },
    {
      "@type": "ListItem",
      "position": 4,
      "item": {
        "name": "Edit users"
      }
    }
  ]
}
  </script>
  <div
    class="page-header"
  >
    <h1
      class="page-header__heading"
    >
      <span
        class="page-header__pre-heading"
      >
        NICE
      </span>
      Users
    </h1>
    <p
      class="page-header__lead"
    >
      Add or remove users from this organisation
    </p>
  </div>
  <div
    class="grid"
  >
    <div
      data-g="12 md:3"
    >
      <div
        class="panel"
      >
        <div
          class="input noMargin"
        >
          <label
            class="input__label"
            for="filter-suggestions"
          >
            Find and add an active user account; search excludes Pending and Locked accounts
          </label>
          <input
            autocomplete="off"
            class="input__input"
            data-qa-sel="filter-suggestions-input"
            id="filter-suggestions"
            name="filter-suggestions"
            type="search"
            value=""
          />
        </div>
        <div
          class="suggestions"
        >
          <ul
            aria-label="suggestions-add-organisation-user"
          />
        </div>
      </div>
    </div>
    <div
      aria-busy="false"
      data-g="12 md:9"
    >
      <h2
        class="orgUsersListSummary"
      >
        Current users
      </h2>
      <table
        class="table"
        data-qa-sel="list-of-organisation-users"
        style="display: table;"
      >
        <thead>
          <tr>
            <th>
              User name
            </th>
            <th>
              Email address
            </th>
            <th>
              Status
            </th>
            <th>
              Remove user
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              Jonny Russell
            </td>
            <td>
              jonathan.russell@nice.org.uk
            </td>
            <td>
              <span
                class="tag tag--consultation"
                data-qa-sel="user-status"
              >
                Active
              </span>
            </td>
            <td>
              <a
                href="#remove-org-user"
              >
                Remove user
              </a>
            </td>
          </tr>
          <tr>
            <td>
              Catherine Quigley
            </td>
            <td>
              catherine.quigley@nice.org.uk
            </td>
            <td>
              <span
                class="tag tag--consultation"
                data-qa-sel="user-status"
              >
                Active
              </span>
            </td>
            <td>
              <a
                href="#remove-org-user"
              >
                Remove user
              </a>
            </td>
          </tr>
          <tr>
            <td>
              Andy Child
            </td>
            <td>
              andrew.child@nice.org.uk
            </td>
            <td>
              <span
                class="tag tag--consultation"
                data-qa-sel="user-status"
              >
                Active
              </span>
            </td>
            <td>
              <a
                href="#remove-org-user"
              >
                Remove user
              </a>
            </td>
          </tr>
          <tr>
            <td>
              Colin Mazurkiewicz
            </td>
            <td>
              colin.mazurkiewicz@nice.org.uk
            </td>
            <td>
              <span
                class="tag tag--consultation"
                data-qa-sel="user-status"
              >
                Active
              </span>
            </td>
            <td>
              <a
                href="#remove-org-user"
              >
                Remove user
              </a>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`should show error message when fetchData function returns 401 error 1`] = `
<div>
  <nav
    aria-label="Breadcrumbs"
    role="navigation"
  >
    <ol
      class="breadcrumbs"
    >
      <li
        class="breadcrumbs__crumb"
      >
        <a
          href="/overview"
        >
          Administration
        </a>
      </li>
      <li
        class="breadcrumbs__crumb"
      >
        <a
          href="/organisations"
        >
          Organisations
        </a>
      </li>
      <li
        class="breadcrumbs__crumb"
      >
        <a
          href="/organisations/1"
        />
      </li>
      <li
        class="breadcrumbs__crumb"
      >
        <span>
          Edit users
        </span>
      </li>
    </ol>
  </nav>
  <script
    type="application/ld+json"
  >
    {
  "@context": "http://schema.org",
  "@type": "BreadcrumbList",
  "itemListElement": [
    {
      "@type": "ListItem",
      "position": 1,
      "item": {
        "@id": "/overview",
        "name": "Administration"
      }
    },
    {
      "@type": "ListItem",
      "position": 2,
      "item": {
        "@id": "/organisations",
        "name": "Organisations"
      }
    },
    {
      "@type": "ListItem",
      "position": 3,
      "item": {
        "@id": "/organisations/1"
      }
    },
    {
      "@type": "ListItem",
      "position": 4,
      "item": {
        "name": "Edit users"
      }
    }
  ]
}
  </script>
  <div
    class="page-header"
  >
    <h1
      class="page-header__heading"
    >
      Error
    </h1>
  </div>
  <div
    class="alert alert--error"
    role="alert"
  >
    <h2>
      Whoops
    </h2>
    <p>
      Sorry, there's been an error!
    </p>
  </div>
</div>
`;

exports[`should show error message when fetchData function returns 500 error 1`] = `
<div>
  <nav
    aria-label="Breadcrumbs"
    role="navigation"
  >
    <ol
      class="breadcrumbs"
    >
      <li
        class="breadcrumbs__crumb"
      >
        <a
          href="/overview"
        >
          Administration
        </a>
      </li>
      <li
        class="breadcrumbs__crumb"
      >
        <a
          href="/organisations"
        >
          Organisations
        </a>
      </li>
      <li
        class="breadcrumbs__crumb"
      >
        <a
          href="/organisations/1"
        />
      </li>
      <li
        class="breadcrumbs__crumb"
      >
        <span>
          Edit users
        </span>
      </li>
    </ol>
  </nav>
  <script
    type="application/ld+json"
  >
    {
  "@context": "http://schema.org",
  "@type": "BreadcrumbList",
  "itemListElement": [
    {
      "@type": "ListItem",
      "position": 1,
      "item": {
        "@id": "/overview",
        "name": "Administration"
      }
    },
    {
      "@type": "ListItem",
      "position": 2,
      "item": {
        "@id": "/organisations",
        "name": "Organisations"
      }
    },
    {
      "@type": "ListItem",
      "position": 3,
      "item": {
        "@id": "/organisations/1"
      }
    },
    {
      "@type": "ListItem",
      "position": 4,
      "item": {
        "name": "Edit users"
      }
    }
  ]
}
  </script>
  <div
    class="page-header"
  >
    <h1
      class="page-header__heading"
    >
      Error
    </h1>
  </div>
  <div
    class="alert alert--error"
    role="alert"
  >
    <h2>
      Whoops
    </h2>
    <p>
      Sorry, there's been an error!
    </p>
  </div>
</div>
`;
